# UVCCamera

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/serenegiant/app/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/serenegiant/app/: MainActivity.java
app/src/main/res/values/: themes.xml
app/src/test/java/com/serenegiant/app/: ExampleUnitTest.java
common/src/androidTest/java/com/serenegiant/common/: ExampleInstrumentedTest.java
common/src/main/: AndroidManifest.xml
common/src/main/java/com/serenegiant/bluetooth/: BluetoothDeviceInfoAdapter.java  BluetoothManager.java
common/src/main/java/com/serenegiant/dialog/: MessageDialogFragmentV4.java
common/src/main/java/com/serenegiant/glutils/: DumbRenderer.java  EGLBase10.java  EGLBase14.java  EffectRendererHolder.java  IRendererCommon.java  RendererHolder.java  StaticTextureSource.java
common/src/main/java/com/serenegiant/media/: AbstractEncoder.java  IRecorder.java  MediaCodecHelper.java  MediaReaper.java  MediaStoreAdapter.java  MediaStoreHelper.java  MediaStoreImageAdapter.java
common/src/main/java/com/serenegiant/net/: ChannelHelper.java  NetworkChangedReceiver.java  UdpBeacon.java  WiFiP2pHelper.java  WiFiP2pListener.java
common/src/main/java/com/serenegiant/utils/: BufferHelper.java  CollectionMap.java  ReentrantReadWriteMap.java  SDUtils.java  UIThreadHelper.java  ViewAnimationHelper.java
common/src/main/java/com/serenegiant/widget/: CustomRecycleViewListener.java  DividerItemDecoration.java  MaskImageView.java  RecycleViewWithEmptyView.java  ValueSelectorAdapter.java
common/src/test/java/com/serenegiant/common/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
libuvccamera/: build.gradle
libuvccamera/src/androidTest/java/com/serenegiant/uvccamera/: ExampleInstrumentedTest.java
libuvccamera/src/main/: AndroidManifest.xml
libuvccamera/src/main/cpp/: CMakeLists.txt  uvccamera.cpp
libuvccamera/src/main/cpp/libjpeg-turbo/: jconfig.h
libuvccamera/src/main/java/com/serenegiant/common/: BaseActivity.java
libuvccamera/src/main/java/com/serenegiant/usb/: UVCCamera.java
libuvccamera/src/main/java/com/serenegiant/uvccamera/: NativeLib.java
libuvccamera/src/test/java/com/serenegiant/uvccamera/: ExampleUnitTest.java
usbCameraCommon/: build.gradle
usbCameraTest/: build.gradle
usbCameraTest/src/androidTest/java/com/serenegiant/usbcameratest/: ExampleInstrumentedTest.java
usbCameraTest/src/main/: AndroidManifest.xml
usbCameraTest/src/main/res/values/: strings.xml
usbCameraTest/src/test/java/com/serenegiant/usbcameratest/: ExampleUnitTest.java
usbCameraTest0/: build.gradle
usbCameraTest0/src/androidTest/java/com/serenegiant/usbcameratest0/: ExampleInstrumentedTest.java
usbCameraTest0/src/main/: AndroidManifest.xml
usbCameraTest0/src/main/java/com/serenegiant/usbcameratest0/: MainActivity.java
usbCameraTest0/src/main/res/values/: strings.xml
usbCameraTest0/src/main/res/values-night/: themes.xml
usbCameraTest0/src/test/java/com/serenegiant/usbcameratest0/: ExampleUnitTest.java
usbCameraTest2/: build.gradle
usbCameraTest2/src/androidTest/java/com/serenegiant/usbcameratest2/: ExampleInstrumentedTest.java
usbCameraTest2/src/main/: AndroidManifest.xml
usbCameraTest2/src/main/java/com/serenegiant/usbcameratest2/: MainActivity.java
usbCameraTest2/src/main/res/values/: strings.xml
usbCameraTest2/src/test/java/com/serenegiant/usbcameratest2/: ExampleUnitTest.java
usbCameraTest8/: build.gradle
usbCameraTest8/src/androidTest/java/com/serenegiant/usbcameratest8/: ExampleInstrumentedTest.java
usbCameraTest8/src/main/: AndroidManifest.xml
usbCameraTest8/src/main/java/com/serenegiant/usbcameratest8/: MainActivity.java
usbCameraTest8/src/main/res/values/: strings.xml
usbCameraTest8/src/test/java/com/serenegiant/usbcameratest8/: ExampleUnitTest.java
